# AKIP-Gratten_Generator_Manger

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractscpicontroller.h  akipfacade.cpp  akipfacade.h  app.rc  build_qt_static.ps1  channelwidget.cpp  channelwidget.h  channelwidget.ui  deploy.ps1  diagnosticsdialog.cpp  diagnosticsdialog.h  gratten_limits.h  grattencontrolwidget.cpp  grattencontrolwidget.h  grattencontrolwidget.ui  grattenga1483controller.cpp  grattenga1483controller.h  iakipcontroller.h  itransport.h  languageswitcher.cpp  languageswitcher.h  laninterface.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mocktransport.cpp  mocktransport.h  modulationdialog.cpp  modulationdialog.h  modulationdialog.ui  resources.qrc  (+14 more)
.claude/: context.md  tasks.md
.github/workflows/: build.yml
design/: ARCHITECTURE_DIAGRAMS.md  DESIGN_APPROACH.md  README.md  WIREFRAMES.md  mockup.html
design/style/: common.qss  dark.qss  light.qss
docs/: ARCHITECTURE.md  BUGS.md  DEVICES_COMMANDS.md  PHYSICS_REPORT.md  ROADMAP.md  TASKS.md  TECH_REPORT.md  TESTING.md
education/: README.md  lesson-01-architecture.md  lesson-02-scpi-protocol.md  lesson-03-rf-physics.md
education/assessment/: skill_assessment.md
education/lectures/: 01_qt_architecture.md  02_interface_pattern.md  03_i18n_and_events.md  04_scpi_protocol.md
education/tasks/: learning_plan.md  practical_tasks.md
tests/: CMakeLists.txt  test_gratten_controller.cpp  test_mock_transport.cpp  test_settings_manager.cpp
translations/: en_US.ts  ru_RU.ts
